syntax = "proto3";

package text_resource_proto;

service TextResource {
    rpc GetText (GetTextRequest) returns (GetTextResponse) {}
}

message GetTextRequest {
    string text_id = 1;
    string locale = 2;
    repeated Param params = 3;

    message Param {
      string param = 1;
    }
}

message GetTextResponse {
    string text = 1;
}